NetBSD Problem Report #58607
From www@netbsd.org Fri Aug 16 11:02:55 2024
Return-Path: <www@netbsd.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
(using TLSv1.3 with cipher TLS_AES_256_GCM_SHA384 (256/256 bits)
key-exchange X25519 server-signature RSA-PSS (2048 bits)
client-signature RSA-PSS (2048 bits))
(Client CN "mail.NetBSD.org", Issuer "mail.NetBSD.org CA" (not verified))
by mollari.NetBSD.org (Postfix) with ESMTPS id 539A71A9242
for <gnats-bugs@gnats.NetBSD.org>; Fri, 16 Aug 2024 11:02:55 +0000 (UTC)
Message-Id: <20240816110254.352211A9243@mollari.NetBSD.org>
Date: Fri, 16 Aug 2024 11:02:54 +0000 (UTC)
From: campbell+netbsd@mumble.net
Reply-To: campbell+netbsd@mumble.net
To: gnats-bugs@NetBSD.org
Subject: C23: <string.h> memset_explicit
X-Send-Pr-Version: www-1.0
>Number: 58607
>Category: standards
>Synopsis: C23: <string.h> memset_explicit
>Confidential: no
>Severity: serious
>Priority: medium
>Responsible: standards-manager
>State: closed
>Class: sw-bug
>Submitter-Id: net
>Arrival-Date: Fri Aug 16 11:05:00 +0000 2024
>Closed-Date: Sat Nov 02 03:09:21 +0000 2024
>Last-Modified: Sat Nov 02 03:09:21 +0000 2024
>Originator: Taylor R Campbell
>Release: current, 10, 9
>Organization:
The NetBSD_explicit Foundation
>Environment:
>Description:
C23 7.26.6.2: The memset_explicit function
https://www.open-std.org/jtc1/sc22/wg14/www/docs/n3096.pdf#page=400
Apparently C23 adopted our name but reversed the words.
>How-To-Repeat:
standards inspection
>Fix:
Yes, please!
>Release-Note:
>Audit-Trail:
From: "Taylor R Campbell" <riastradh@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc:
Subject: PR/58607 CVS commit: src
Date: Sat, 2 Nov 2024 02:43:49 +0000
Module Name: src
Committed By: riastradh
Date: Sat Nov 2 02:43:48 UTC 2024
Modified Files:
src/common/lib/libc/string: explicit_memset.c
src/distrib/sets/lists/comp: mi
src/include: string.h
src/lib/libc/string: Makefile.inc explicit_memset.3
src/tests/lib/libc/string: t_memset.c
Log Message:
memset_explicit(3): Add C23 alias for explicit_memset.
PR standards/58607: C23: <string.h> memset_explicit
To generate a diff of this commit:
cvs rdiff -u -r1.4 -r1.5 src/common/lib/libc/string/explicit_memset.c
cvs rdiff -u -r1.2479 -r1.2480 src/distrib/sets/lists/comp/mi
cvs rdiff -u -r1.56 -r1.57 src/include/string.h
cvs rdiff -u -r1.92 -r1.93 src/lib/libc/string/Makefile.inc
cvs rdiff -u -r1.2 -r1.3 src/lib/libc/string/explicit_memset.3
cvs rdiff -u -r1.4 -r1.5 src/tests/lib/libc/string/t_memset.c
Please note that diffs are not public domain; they are subject to the
copyright notices on the relevant files.
State-Changed-From-To: open->closed
State-Changed-By: riastradh@NetBSD.org
State-Changed-When: Sat, 02 Nov 2024 03:09:21 +0000
State-Changed-Why:
fixed in HEAD, not worth pullup since packages are built against 10.0/9.0
>Unformatted:
(Contact us)
$NetBSD: query-full-pr,v 1.47 2022/09/11 19:34:41 kim Exp $
$NetBSD: gnats_config.sh,v 1.9 2014/08/02 14:16:04 spz Exp $
Copyright © 1994-2024
The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.